// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-dash cls 1`] = `
"import {styles} from '@dash-ui/styles'

// \\"display:flex;\\"
const variant = styles.cls\`display: flex;\`
// \\"display:flex;\\"
const variant0 = styles.cls('display: flex;')
// \\"color:\\"+color.red+\\";\\"
const variant1 = styles.cls(
  ({color}) => \`
    color: \${color.red};
  \`
)
// {color: color.blue}
const variant2 = styles.cls({
  color: color.blue,
})
// \\"color:\\"+color.yellow+\\";\\"
const variant3 = styles.cls(({color}) => {
  return \`color: \${color.yellow};\`
})
// \\"color:\\"+color.green+\\";\\"
const variant4 = styles.cls(({color}) => {
  return {
    color: color.green,
  }
})
// if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"
const variant5 = styles.cls(({color}) => {
  if (IS_PROD) {
    return \`color: \${color.pink};\`
  }
  return \`color: \${color.yellow};\`
})
// if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.cls(({color}) => {
  if (IS_PROD) {
    return {
      color: color.lightBlue,
    }
  }
  return {
    color: color.yellow,
  }
})
// return \\"height\\"+vh+\\";\\"
const variant7 = styles.cls(({vh}) => {
  return {
    height: vh,
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { styles } from '@dash-ui/styles'; // \\"display:flex;\\"

const variant = styles.cls(\\"display:flex;\\"); // \\"display:flex;\\"

const variant0 = styles.cls(\\"display:flex;\\"); // \\"color:\\"+color.red+\\";\\"

const variant1 = styles.cls(({
  color
}) => \\"color:\\" + color.red + \\";\\"); // {color: color.blue}

const variant2 = styles.cls(\\"color:\\" + (color.blue + \\";\\")); // \\"color:\\"+color.yellow+\\";\\"

const variant3 = styles.cls(({
  color
}) => {
  return \\"color:\\" + color.yellow + \\";\\";
}); // \\"color:\\"+color.green+\\";\\"

const variant4 = styles.cls(({
  color
}) => {
  return \\"color:\\" + (color.green + \\";\\");
}); // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant5 = styles.cls(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + color.pink + \\";\\";
  }

  return \\"color:\\" + color.yellow + \\";\\";
}); // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.cls(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + (color.lightBlue + \\";\\");
  }

  return \\"color:\\" + (color.yellow + \\";\\");
}); // return \\"height\\"+vh+\\";\\"

const variant7 = styles.cls(({
  vh
}) => {
  return \\"height:\\" + (vh + \\";\\");
});"
`;

exports[`babel-plugin-dash insertGlobal 1`] = `
"import {styles} from '@dash-ui/styles'

// styles.insertGlobal(\\"html{display:flex;}\\")
const variant = styles.insertGlobal\`html { display: flex; }\`
// \\"html{display:flex;}\\"
const variant0 = styles.insertGlobal('html { display: flex; } ')
// \\"html{color:\\"+color.red+\\";}\\"
const variant1 = styles.insertGlobal(
  ({color}) => \`
    html {
      color: \${color.red};
    }
  \`
)
// {html: {color: color.blue}}
const variant2 = styles.insertGlobal({
  html: {
    color: color.blue,
  },
})
// \\"html{color:\\"+color.yellow+\\";}\\"
const variant3 = styles.insertGlobal(({color}) => {
  return \`
    html { 
      color: \${color.yellow}; 
    }
  \`
})
// \\"html{color:\\"+color.green+\\";}\\"
const variant4 = styles.insertGlobal(({color}) => {
  return {
    html: {
      color: color.green,
    },
  }
})
// if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"
const variant5 = styles.insertGlobal(({color}) => {
  if (IS_PROD) {
    return \`html { color: \${color.pink}; }\`
  }
  return \`html { color: \${color.yellow}; }\`
})
// if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.insertGlobal(({color}) => {
  if (IS_PROD) {
    return {
      html: {
        color: color.lightBlue,
      },
    }
  }
  return {
    html: {
      color: color.yellow,
    },
  }
})
// return \\"html{height\\"+vh+\\";}\\"
const variant7 = styles.insertGlobal(({vh}) => {
  return {
    html: {
      height: vh,
    },
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { styles } from '@dash-ui/styles'; // styles.insertGlobal(\\"html{display:flex;}\\")

const variant = styles.insertGlobal(\\"html{display:flex;}\\"); // \\"html{display:flex;}\\"

const variant0 = styles.insertGlobal(\\"html{display:flex;}\\"); // \\"html{color:\\"+color.red+\\";}\\"

const variant1 = styles.insertGlobal(({
  color
}) => \\"html{color:\\" + color.red + \\";}\\"); // {html: {color: color.blue}}

const variant2 = styles.insertGlobal(\\"html{\\" + (\\"color:\\" + (color.blue + \\";\\") + \\"}\\")); // \\"html{color:\\"+color.yellow+\\";}\\"

const variant3 = styles.insertGlobal(({
  color
}) => {
  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // \\"html{color:\\"+color.green+\\";}\\"

const variant4 = styles.insertGlobal(({
  color
}) => {
  return \\"html{\\" + (\\"color:\\" + (color.green + \\";\\") + \\"}\\");
}); // if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant5 = styles.insertGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{color:\\" + color.pink + \\";}\\";
  }

  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.insertGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{\\" + (\\"color:\\" + (color.lightBlue + \\";\\") + \\"}\\");
  }

  return \\"html{\\" + (\\"color:\\" + (color.yellow + \\";\\") + \\"}\\");
}); // return \\"html{height\\"+vh+\\";}\\"

const variant7 = styles.insertGlobal(({
  vh
}) => {
  return \\"html{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\");
});"
`;

exports[`babel-plugin-dash keyframes 1`] = `
"import {styles} from '@dash-ui/styles'

// styles.keyframe(\\"0%{opacity:0;}\\")
const variant = styles.keyframes\`0% { opacity: 0; } \`
// \\"0%{opacity:0;}\\"
const variant0 = styles.keyframes('0% { opacity: 0; } ')
// \\"0%{opacity:0;}100%{opacity:1;}\\"
const variant1 = styles.keyframes(
  () => \`
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1
    }
  \`
)
// no cahnge
const variant2 = styles.keyframes({
  '0%': {
    opacity: opacity,
  },
})
// \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"
const variant3 = styles.keyframes(({opacity}) => {
  return \`
    0% {
      opacity: \${opacity.none};
    }
    100% {
      opacity: \${opacity.some};
    }
  \`
})
// \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"
const variant4 = styles.keyframes(({opacity}) => {
  return {
    '0%': {
      opacity: opacity.none,
    },
    '100%': {
      opacity: opacity.some,
    },
  }
})
// if (IS_PROD) return \\"0%{opacity:\\"+opacity.none+\\";}\\"
// return \\"0%{opacity:\\"+opacity.some+\\";}\\"
const variant5 = styles.keyframes(({opacity}) => {
  if (IS_PROD) {
    return \`0% { opacity: \${opacity.none}; }\`
  }
  return \`0% { opacity: \${opacity.some}; }\`
})
// if (IS_PROD) return \\"0%{color:\\"+color.lightBlue+\\";}\\"
// return \\"0%{color:\\"+color.yellow+\\";}\\"
const variant6 = styles.keyframes(({color}) => {
  if (IS_PROD) {
    return {
      '0%': {
        color: color.lightBlue,
      },
    }
  }
  return {
    '0%': {
      color: color.yellow,
    },
  }
})
// return \\"0%{height:\\"+vh+\\";}100%{height:100px;}\\"
const variant7 = styles.keyframes(({vh}) => {
  return {
    '0%': {
      height: vh,
    },
    '100%': {
      height: 100,
    },
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { styles } from '@dash-ui/styles'; // styles.keyframe(\\"0%{opacity:0;}\\")

const variant = styles.keyframes(\\"0%{opacity:0;}\\"); // \\"0%{opacity:0;}\\"

const variant0 = styles.keyframes(\\"0%{opacity:0;}\\"); // \\"0%{opacity:0;}100%{opacity:1;}\\"

const variant1 = styles.keyframes(() => \\"0%{opacity:0;}100%{opacity:1}\\"); // no cahnge

const variant2 = styles.keyframes(\\"0%{\\" + (\\"opacity:\\" + (opacity + \\";\\") + \\"}\\")); // \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"

const variant3 = styles.keyframes(({
  opacity
}) => {
  return \\"0%{opacity:\\" + opacity.none + \\";}100%{opacity:\\" + opacity.some + \\";}\\";
}); // \\"0%{opacity:\\"+opacity.none+\\";}100%{opacity:\\"+opacity.some+\\";}\\"

const variant4 = styles.keyframes(({
  opacity
}) => {
  return \\"0%{\\" + (\\"opacity:\\" + (opacity.none + \\";\\") + \\"}\\") + (\\"100%{\\" + (\\"opacity:\\" + (opacity.some + \\";\\") + \\"}\\"));
}); // if (IS_PROD) return \\"0%{opacity:\\"+opacity.none+\\";}\\"
// return \\"0%{opacity:\\"+opacity.some+\\";}\\"

const variant5 = styles.keyframes(({
  opacity
}) => {
  if (IS_PROD) {
    return \\"0%{opacity:\\" + opacity.none + \\";}\\";
  }

  return \\"0%{opacity:\\" + opacity.some + \\";}\\";
}); // if (IS_PROD) return \\"0%{color:\\"+color.lightBlue+\\";}\\"
// return \\"0%{color:\\"+color.yellow+\\";}\\"

const variant6 = styles.keyframes(({
  color
}) => {
  if (IS_PROD) {
    return \\"0%{\\" + (\\"color:\\" + (color.lightBlue + \\";\\") + \\"}\\");
  }

  return \\"0%{\\" + (\\"color:\\" + (color.yellow + \\";\\") + \\"}\\");
}); // return \\"0%{height:\\"+vh+\\";}100%{height:100px;}\\"

const variant7 = styles.keyframes(({
  vh
}) => {
  return \\"0%{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\") + (\\"100%{\\" + (\\"height:100px;\\" + \\"}\\"));
});"
`;

exports[`babel-plugin-dash one 1`] = `
"import {styles} from '@dash-ui/styles'

// \\"display:flex;\\"
const variant = styles.one\`display: flex;\`
// \\"display:flex;\\"
const variant0 = styles.one('display: flex;')
// \\"color:\\"+color.red+\\";\\"
const variant1 = styles.one(
  ({color}) => \`
    color: \${color.red};
  \`
)
// {color: color.blue}
const variant2 = styles.one({
  color: color.blue,
})
// \\"color:\\"+color.yellow+\\";\\"
const variant3 = styles.one(({color}) => {
  return \`color: \${color.yellow};\`
})
// \\"color:\\"+color.green+\\";\\"
const variant4 = styles.one(({color}) => {
  return {
    color: color.green,
  }
})
// if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"
const variant5 = styles.one(({color}) => {
  if (IS_PROD) {
    return \`color: \${color.pink};\`
  }
  return \`color: \${color.yellow};\`
})
// if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = styles.one(({color}) => {
  if (IS_PROD) {
    return {
      color: color.lightBlue,
    }
  }
  return {
    color: color.yellow,
  }
})
// return \\"height\\"+vh+\\";\\"
const variant7 = styles.one(({vh}) => {
  return {
    height: vh,
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { styles } from '@dash-ui/styles'; // \\"display:flex;\\"

const variant = /*#__PURE__*/styles.one(\\"display:flex;\\"); // \\"display:flex;\\"

const variant0 = /*#__PURE__*/styles.one(\\"display:flex;\\"); // \\"color:\\"+color.red+\\";\\"

const variant1 = /*#__PURE__*/styles.one(({
  color
}) => \\"color:\\" + color.red + \\";\\"); // {color: color.blue}

const variant2 = /*#__PURE__*/styles.one(\\"color:\\" + (color.blue + \\";\\")); // \\"color:\\"+color.yellow+\\";\\"

const variant3 = /*#__PURE__*/styles.one(({
  color
}) => {
  return \\"color:\\" + color.yellow + \\";\\";
}); // \\"color:\\"+color.green+\\";\\"

const variant4 = /*#__PURE__*/styles.one(({
  color
}) => {
  return \\"color:\\" + (color.green + \\";\\");
}); // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant5 = /*#__PURE__*/styles.one(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + color.pink + \\";\\";
  }

  return \\"color:\\" + color.yellow + \\";\\";
}); // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = /*#__PURE__*/styles.one(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + (color.lightBlue + \\";\\");
  }

  return \\"color:\\" + (color.yellow + \\";\\");
}); // return \\"height\\"+vh+\\";\\"

const variant7 = /*#__PURE__*/styles.one(({
  vh
}) => {
  return \\"height:\\" + (vh + \\";\\");
});"
`;

exports[`babel-plugin-dash styles 1`] = `
"import {styles} from '@dash-ui/styles'

const cls = styles({
  // display:flex;
  default: 'display: flex;',
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({color}) => \`
    color: \${color.red};
  \`,
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({color}) => ({
    color: color.blue,
  }),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({color}) => {
    return \`color: \${color.yellow};\`
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({color}) => {
    return {
      color: color.green,
    }
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({color}) => {
    if (IS_PROD) {
      return \`color: \${color.pink};\`
    }
    return \`color: \${color.yellow};\`
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({color}) => {
    if (IS_PROD) {
      return {
        color: color.lightBlue,
      }
    }
    return {
      color: color.yellow,
    }
  },
  // return \\"height:\\"+vh+\\";\\"
  vh: ({vh}) => {
    return {
      height: vh,
    }
  },
  // return \\".foo{height:\\"+vh+\\"};\\"
  vh: ({vh}) => {
    return {
      '.foo': {
        height: vh,
      },
    }
  },
  // Should minify
  vh: ({vh}) => {
    return {
      '.foo': {
        height: vh + ' 100vh' + 'foo' + ('foo' + 'bar'),
      },
    }
  },
  // Should not minify
  vh: ({vh}) => {
    return {
      '.foo': {
        height: vh + ' 100vh' + 'foo' + ('foo' + (() => {})),
      },
    }
  },
  default: ({pad, radius, transition}) => ({
    position: 'absolute',
    pointerEvents: 'none',
    display: 'grid',
    gridTemplateColumns: \`\${pad.sm} max-content 1fr\`,
    height: '100%',
    width: '100%',
    color: 'currentColor',
    borderRadius: radius.primary,
    transitionProperty: 'box-shadow',
    transitionDuration: transition.duration.fast,
    transitionTimingFunction: transition.timing.inOut,

    '> span': {
      height: '100%',
      width: '100%',
      border: \`1px solid currentColor\`,
      transitionProperty: 'border-color, border-width',
      transitionDuration: transition.duration.fast,
      transitionTimingFunction: transition.timing.inOut,

      ':nth-child(1)': {
        borderRightWidth: 0,
        borderRadius: \`\${radius.primary} 0 0 \${radius.primary}\`,
      },

      ':nth-child(2)': {
        display: 'flex',
        alignItems: 'center',
        borderRightWidth: 0,
        borderLeftWidth: 0,
        padding: \`0 \${pad.sm}\`,
      },

      ':nth-child(3)': {
        borderLeftWidth: 0,
        borderRadius: \`0 \${radius.primary} \${radius.primary} 0\`,
      },
    },
  }),

  focused: ({elevation}) => ({
    boxShadow: elevation.md,

    '> span': {
      borderBottomWidth: 2,
    },
  }),

  hasValue: ({font}) => ({
    fontWeight: 400,
    fontSize: font.size.xs,
    transform: \`translateY(-1.618em)\`,
  }),

  hasValue: ({font}) => ({
    fontWeight: 400,
    fontSize: font.size.xs,
    transform: \`translateY(-1.618em)\` + foo('bar'),
  }),

  hasValue3: ({font}) => ({
    fontWeight: 400,
    fontSize: font.size.xs,
    transform: foo('bar'),
  }),
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { styles } from '@dash-ui/styles';
const cls = /*#__PURE__*/styles({
  // display:flex;
  default: \\"display:flex;\\",
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({
    color
  }) => \\"color:\\" + color.red + \\";\\",
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({
    color
  }) => \\"color:\\" + (color.blue + \\";\\"),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({
    color
  }) => {
    return \\"color:\\" + color.yellow + \\";\\";
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({
    color
  }) => {
    return \\"color:\\" + (color.green + \\";\\");
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + color.pink + \\";\\";
    }

    return \\"color:\\" + color.yellow + \\";\\";
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + (color.lightBlue + \\";\\");
    }

    return \\"color:\\" + (color.yellow + \\";\\");
  },
  // return \\"height:\\"+vh+\\";\\"
  vh: ({
    vh
  }) => {
    return \\"height:\\" + (vh + \\";\\");
  },
  // return \\".foo{height:\\"+vh+\\"};\\"
  vh: ({
    vh
  }) => {
    return \\".foo{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\");
  },
  // Should minify
  vh: ({
    vh
  }) => {
    return \\".foo{\\" + (\\"height:\\" + (vh + ' 100vh' + 'foo' + ('foo' + 'bar') + \\";\\") + \\"}\\");
  },
  // Should not minify
  vh: ({
    vh
  }) => {
    return {
      '.foo': {
        height: vh + ' 100vh' + 'foo' + ('foo' + (() => {}))
      }
    };
  },
  default: ({
    pad,
    radius,
    transition
  }) => \\"position:absolute;\\" + \\"pointer-events:none;\\" + \\"display:grid;\\" + (\\"grid-template-columns:\\" + (pad.sm + \\" max-content 1fr\\" + \\";\\")) + \\"height:100%;\\" + \\"width:100%;\\" + \\"color:currentColor;\\" + (\\"border-radius:\\" + (radius.primary + \\";\\")) + \\"transition-property:box-shadow;\\" + (\\"transition-duration:\\" + (transition.duration.fast + \\";\\")) + (\\"transition-timing-function:\\" + (transition.timing.inOut + \\";\\")) + (\\"> span{\\" + (\\"height:100%;\\" + \\"width:100%;\\" + (\\"border:\\" + (\\"1px solid currentColor\\" + \\";\\")) + \\"transition-property:border-color,border-width;\\" + (\\"transition-duration:\\" + (transition.duration.fast + \\";\\")) + (\\"transition-timing-function:\\" + (transition.timing.inOut + \\";\\")) + (\\":nth-child(1){\\" + (\\"border-right-width:0;\\" + (\\"border-radius:\\" + (radius.primary + \\" 0 0 \\" + radius.primary + \\";\\")) + \\"}\\")) + (\\":nth-child(2){\\" + (\\"display:flex;\\" + \\"align-items:center;\\" + \\"border-right-width:0;\\" + \\"border-left-width:0;\\" + (\\"padding:\\" + (\\"0 \\" + pad.sm + \\";\\")) + \\"}\\")) + (\\":nth-child(3){\\" + (\\"border-left-width:0;\\" + (\\"border-radius:\\" + (\\"0 \\" + radius.primary + \\" \\" + radius.primary + \\" 0\\" + \\";\\")) + \\"}\\")) + \\"}\\")),
  focused: ({
    elevation
  }) => \\"box-shadow:\\" + (elevation.md + \\";\\") + (\\"> span{\\" + (\\"border-bottom-width:2px;\\" + \\"}\\")),
  hasValue: ({
    font
  }) => \\"font-weight:400px;\\" + (\\"font-size:\\" + (font.size.xs + \\";\\")) + (\\"transform:\\" + (\\"translateY(-1.618em)\\" + \\";\\")),
  hasValue: ({
    font
  }) => \\"font-weight:400px;\\" + (\\"font-size:\\" + (font.size.xs + \\";\\")) + (\\"transform:\\" + (\`translateY(-1.618em)\` + foo('bar') + \\";\\")),
  hasValue3: ({
    font
  }) => \\"font-weight:400px;\\" + (\\"font-size:\\" + (font.size.xs + \\";\\")) + (\\"transform:\\" + (foo('bar') + \\";\\"))
});"
`;
